--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ head
   link(rel="stylesheet", href="/css/style.css")
   
   script(src="/bower_components/angular/angular.js", charset="utf-8")
-  
+  script(src="/bower_components/angular-ui-router/release/angular-ui-router.min.js")
   script(src="/js/bundle.js")
   
 body(ng-app='myApp')
